# poc-design-pattern-visitor

./: .pre-commit-config.yaml  README.md
.github/: FUNDING.yml
.github/workflows/: cpp.yaml
conda/: cpp.yaml
cpp/: Makefile  meson.build
cpp/scripts/: run-clang-tidy.sh
cpp/src/: expr.cpp  expr.h  includes.h  main.cpp  visitor.cpp  visitor.h
cpp/tests/: meson.build  test_visitor.cpp
